--- a/dashboard.html
+++ b/dashboard.html
@@ -217,12 +217,12 @@
 				</a>
 				<ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
 					<li>
-						<a href="">
+						<a href="/interface-web-bvxa-v2/all-post.html">
 							<i class="bi bi-circle"></i><span>Tất cả bài viết</span>
 						</a>
 					</li>
 					<li>
-						<a href="/admin-add-news">
+						<a href="/interface-web-bvxa-v2/add-news.html">
 							<i class="bi bi-circle"></i><span>Thêm bài viết mới</span>
 						</a>
 					</li>
@@ -237,12 +237,12 @@
 				</a>
 				<ul id="tables-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
 					<li>
-						<a href="tables-general.html">
+						<a href="">
 							<i class="bi bi-circle"></i><span>Lịch hẹn thai sản</span>
 						</a>
 					</li>
 					<li>
-						<a href="/table">
+						<a href="/interface-web-bvxa-v2/tables-data.html">
 							<i class="bi bi-circle"></i><span>Lịch hẹn ung bướu</span>
 						</a>
 					</li>
