--- a/add-news.html
+++ b/add-news.html
@@ -263,12 +263,12 @@
 				</a>
 				<ul id="forms-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
 					<li>
-						<a href="/admin-all-post">
+						<a href="/interface-web-bvxa-v2/all-post.html">
 							<i class="bi bi-circle"></i><span>Tất cả bài viết</span>
 						</a>
 					</li>
 					<li>
-						<a href="/admin-add-news" class="active">
+						<a href="/interface-web-bvxa-v2/add-news.html" class="active">
 							<i class="bi bi-circle"></i><span>Thêm bài viết mới</span>
 						</a>
 					</li>
@@ -288,7 +288,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="/table">
+						<a href="/interface-web-bvxa-v2/tables-data.html">
 							<i class="bi bi-circle"></i><span>Lịch hẹn ung bướu</span>
 						</a>
 					</li>
