--- a/tables-data.html
+++ b/tables-data.html
@@ -258,12 +258,12 @@
 				</a>
 				<ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
 					<li>
-						<a href="/admin-all-post">
+						<a href="/interface-web-bvxa-v2/all-post.html">
 							<i class="bi bi-circle"></i><span>Tất cả bài viết</span>
 						</a>
 					</li>
 					<li>
-						<a href="/admin-add-news">
+						<a href="/interface-web-bvxa-v2/add-news.html">
 							<i class="bi bi-circle"></i><span>Thêm bài viết mới</span>
 						</a>
 					</li>
@@ -283,7 +283,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="/table" class="active">
+						<a href="/interface-web-bvxa-v2/tables-data.html" class="active">
 							<i class="bi bi-circle"></i><span>Lịch hẹn ung bướu</span>
 						</a>
 					</li>
