--- a/vaccination.html
+++ b/vaccination.html
@@ -31,13 +31,13 @@
 			<div class="justify-content-end">
 				<nav id="navbar" class="navbar">
 					<ul>
-						<li><a class="nav-link scrollto" href="/">Giới thiệu</a></li>
-						<li><a class="nav-link scrollto" href="/tin-tuc">Tin tức</a></li>
-						<li><a class="nav-link scrollto" href="/chuyen-khoa">Chuyên khoa</a></li>
-						<li><a class="nav-link scrollto" href="/cap-cuu">Cấp cứu</a></li>
-						<li><a class="nav-link scrollto active" href="/tiem-chung">Tiêm chủng</a></li>
-						<li><a class="nav-link scrollto" href="/thanh-tuu">Thành tựu</a></li>
-						<li><a class="nav-link scrollto" href="/uu-dai">Ưu đãi</a></li>
+						<li><a class="nav-link scrollto" href="/interface-web-bvxa-v2/">Giới thiệu</a></li>
+						<li><a class="nav-link scrollto" href="/interface-web-bvxa-v2/news.html">Tin tức</a></li>
+						<li><a class="nav-link scrollto" href="/interface-web-bvxa-v2/department.html">Chuyên khoa</a></li>
+						<li><a class="nav-link scrollto" href="/interface-web-bvxa-v2/emergency.html">Cấp cứu</a></li>
+						<li><a class="nav-link scrollto active" href="/interface-web-bvxa-v2/vaccination.html">Tiêm chủng</a></li>
+						<li><a class="nav-link scrollto" href="/interface-web-bvxa-v2/achievement.html">Thành tựu</a></li>
+						<li><a class="nav-link scrollto" href="/interface-web-bvxa-v2/endow.html">Ưu đãi</a></li>
 					</ul>
 					<i class="bi bi-list mobile-nav-toggle d-none"></i>
 					<a class="hidden-btn btn-getstarted m-l-10" href="" data-bs-toggle="modal"
