--- a/dashboard.html
+++ b/dashboard.html
@@ -205,7 +205,7 @@
 	<aside id="sidebar" class="sidebar">
 		<ul class="sidebar-nav" id="sidebar-nav">
 			<li class="nav-item">
-				<a class="nav-link" href="/admin">
+				<a class="nav-link" href="/interface-web-bvxa-v2/">
 					<i class="bi bi-grid"></i>
 					<span>Dashboard</span>
 				</a>
