--- a/add-news.html
+++ b/add-news.html
@@ -249,7 +249,7 @@
 		<ul class="sidebar-nav" id="sidebar-nav">
 
 			<li class="nav-item">
-				<a class="nav-link collapsed" href="/admin">
+				<a class="nav-link collapsed" href="/interface-web-bvxa-v2/dashboard.html">
 					<i class="bi bi-grid"></i>
 					<span>Dashboard</span>
 				</a>
