--- a/ttub.html
+++ b/ttub.html
@@ -396,7 +396,7 @@
 				<div class="row mt-3">
 					<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 						<h6 class="text-uppercase fw-bold mb-4">
-							<i class="fas fa-gem me-3"></i>Bệnh viện đa khoa Xuyến Á
+							<i class="fas fa-gem me-3"></i>Bệnh viện đa khoa Xuyên Á
 						</h6>
 						<p>
 							BVXA luôn giữ vững tiêu chí “CHĂM CHÚT TỪ NHỮNG VIỆC NHỎ NHẤT” để thực hiện cam kết
